--- a/1.md
+++ b/1.md
@@ -19,7 +19,7 @@
            <meta name="twitter:creator" content="@80000hours" />```
 Part 1:
 What makes for a dream job? Here&#039;s what the evidence says.
-We reviewed over 60 studies about what makes for a dream job. Here&#8217;s what we&nbsp;found.
+# We reviewed over 60 studies about what makes for a dream job. Here&#8217;s what we&nbsp;found.
 By <span class="byline author vcard"><a href="https://80000hours.org/author/benjamin-todd/" rel="author" class="fn">Benjamin Todd</a></span> &middot; Last updated <time class="update" datetime="2017-04-07T00:00:00+00:00">April 2017</time>
 @img(https://cdn.80000hours.org/wp-content/uploads/2016/04/icecream-taster-v16-e1465228392655.png)
 We all want to find a dream job that’s enjoyable and meaningful, but what does that actually mean?
@@ -39,7 +39,7 @@ Rather, you can develop passion by doing work that you find enjoyable and meanin
                            <li>Supportive conditions: engaging work that lets you enter a state of flow; supportive colleagues; lack of major negatives like unfair pay; and work that fits your personal life.</li>
                        </ol>
                    </div>```
-#Where we go wrong
+## Where we go wrong
 The usual way people try to work out their dream job is to *imagine* different jobs and think about how satisfying they seem. Or they think about times they’ve felt fulfilled in the past and self-reflect about what matters most to them.
 @img-dsc(https://cdn.80000hours.org/wp-content/uploads/2016/03/xkcd-dream-job.png, `<a href="https://xkcd.com/1346/" target="_blank"><center>xkcd</center></a>`)
 If this were a normal career guide, we’d start by getting you to write out a list of what you most want from a job, like “working outdoors” and “working with ambitious people”. The best-selling career advice book of all time, *What Color is Your Parachute*, recommends exactly this. The hope is that, deep down, people know what they really want.
@@ -49,7 +49,7 @@ It turns out we’re even bad at *remembering* how satisfying different experien
 |The fact that we often judge the pleasure of an experience by its ending can cause us to make some curious choices.
 |– Prof. Dan Gilbert, Stumbling on Happiness
 The same research that proves how bad we are at self-reflection can help us make more informed choices. We now have two decades of research into positive psychology – the science of happiness – as well as decades of research into motivation and job satisfaction. We’ll summarise the main lessons of this research and explain what it means for finding a fulfilling job.
-#Two overrated goals for a fulfilling career
+## Two overrated goals for a fulfilling career
 People often imagine that a dream job is well paid and easy.
 One of the leading job rankings in the US, provided by Careercast, rates jobs on the following criteria:[^:`CareerCast’s 2015 methodology is described <a href="http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">here</a>. <br> <a href="https://web.archive.org/web/20160302120256/http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">Archived link</a>, retrieved 2-March-2016`]
 1. Is it highly paid?
@@ -59,5 +59,7 @@ One of the leading job rankings in the US, provided by Careercast, rates jobs on
 Based on this, the best job in 2015 was: actuary.[^:`<a href="http://www.careercast.com/jobs-rated/best-jobs-2015">Actuary was the top ranked career in 2015.</a> <br> <a href="https://web.archive.org/web/20160302120647/http://www.careercast.com/jobs-rated/best-jobs-2015">Archived link</a>, retrieved 2-Mar-2016.`] That is, someone who uses statistics to measure and manage risks, often in the insurance industry.
 It’s true that actuaries are more satisfied with their jobs than average, but they’re not among the most satisfied.[^:`A national survey by the UK’s Cabinet Office in 2014 (published by the University of Kent) found actuaries ranked 64th out of 274 job titles, putting them in the top 23%. <br> <a href="http://www.bbc.com/news/magazine-26671221">BBC summary</a>, <a href="https://web.archive.org/web/20170416020107/http://www.bbc.com/news/magazine-26671221">Archived link</a>, retrieved 15-April-2017. <br> <a href="http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm">http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm</a>`] Only 36% say their work is meaningful,[^:`A national survey by the UK’s Cabinet Office in 2014 (published by the University of Kent) found actuaries ranked 64th out of 274 job titles, putting them in the top 23%. <br> <a href="http://www.bbc.com/news/magazine-26671221">BBC summary</a>, <a href="https://web.archive.org/web/20170416020107/http://www.bbc.com/news/magazine-26671221">Archived link</a>, retrieved 15-April-2017. <br> <a href="http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm">http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm</a>`] so being an actuary isn’t a particularly fulfilling career.
 So the *Careercast* list isn’t capturing everything. In fact, the evidence suggests that money and avoiding stress aren’t that important.
-##Money makes you happier, but only a little
+### Money makes you happier, but only a little
+
+
 
