--- a/1.md
+++ b/1.md
@@ -16,7 +16,8 @@
            <meta name="twitter:title" content="We reviewed 60 studies on what makes for a dream job. Here’s what we found." />
            <meta name="twitter:site" content="@80000hours" />
            <meta name="twitter:image" content="https://cdn.80000hours.org/wp-content/uploads/2016/04/icecream-taster-v16-e1465228392655.png" />
-           <meta name="twitter:creator" content="@80000hours" />```
+           <meta name="twitter:creator" content="@80000hours" />
+```
 Part 1:
 What makes for a dream job? Here&#039;s what the evidence says.
 # We reviewed over 60 studies about what makes for a dream job. Here&#8217;s what we&nbsp;found.
