--- a/1.md
+++ b/1.md
@@ -62,7 +62,7 @@ Rather, you can develop passion by doing work that you find enjoyable and meanin
 
 The usual way people try to work out their dream job is to *imagine* different jobs and think about how satisfying they seem. Or they think about times they’ve felt fulfilled in the past and self-reflect about what matters most to them.
 
-![`<a href="https://xkcd.com/1346/" target="_blank"><center>xkcd</center></a>`](https://cdn.80000hours.org/wp-content/uploads/2016/03/xkcd-dream-job.png)
+![](https://cdn.80000hours.org/wp-content/uploads/2016/03/xkcd-dream-job.png)[`<a href="https://xkcd.com/1346/" target="_blank"><center>xkcd</center></a>`]
 
 If this were a normal career guide, we’d start by getting you to write out a list of what you most want from a job, like “working outdoors” and “working with ambitious people”. The best-selling career advice book of all time, *What Color is Your Parachute*, recommends exactly this. The hope is that, deep down, people know what they really want.
 
@@ -84,11 +84,8 @@ People often imagine that a dream job is well paid and easy.
 One of the leading job rankings in the US, provided by Careercast, rates jobs on the following criteria:[^:`CareerCast’s 2015 methodology is described <a href="http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">here</a>. <br> <a href="https://web.archive.org/web/20160302120256/http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">Archived link</a>, retrieved 2-March-2016`]
 
 1. Is it highly paid?
-
 1. Is it going to be highly paid in the future?
-
 1. Is it stressful?
-
 1. Is the working environment unpleasant?
 
 Based on this, the best job in 2015 was: actuary.[^:`<a href="http://www.careercast.com/jobs-rated/best-jobs-2015">Actuary was the top ranked career in 2015.</a> <br> <a href="https://web.archive.org/web/20160302120647/http://www.careercast.com/jobs-rated/best-jobs-2015">Archived link</a>, retrieved 2-Mar-2016.`] That is, someone who uses statistics to measure and manage risks, often in the insurance industry.
