--- a/1.md
+++ b/1.md
@@ -72,7 +72,7 @@ You can probably think of times in your own life when you were excited about a h
 
 It turns out we’re even bad at *remembering* how satisfying different experiences were. One well-established mistake is that we tend to judge an experience mainly by its ending. If you missed your flight on the last day of an enjoyable holiday, you’ll probably remember the holiday as bad. This means we can’t just trust our intuitions; we need a more systematic way of working out which job is best for us.
 
-> The fact that we often judge the pleasure of an experience by its ending can cause us to make some curious choices.
+> The fact that we often judge the pleasure of an experience by its ending can cause us to make some curious choices.<br />
 > – Prof. Dan Gilbert, Stumbling on Happiness
 
 The same research that proves how bad we are at self-reflection can help us make more informed choices. We now have two decades of research into positive psychology – the science of happiness – as well as decades of research into motivation and job satisfaction. We’ll summarise the main lessons of this research and explain what it means for finding a fulfilling job.
