--- a/1.md
+++ b/1.md
@@ -44,7 +44,7 @@ Rather, you can develop passion by doing work that you find enjoyable and meanin
 
 *Watch this video or read the full article (15 minutes). If you just want the raw research, see the evidence review.*
 
-@ytb(iY5Vd4LH1J4)
+!ytb-iY5Vd4LH1J4
 
 ```
                    <div class="panel clearfix">
