--- a/1.md
+++ b/1.md
@@ -83,10 +83,10 @@ People often imagine that a dream job is well paid and easy.
 
 One of the leading job rankings in the US, provided by Careercast, rates jobs on the following criteria:[^:`CareerCast’s 2015 methodology is described <a href="http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">here</a>. <br> <a href="https://web.archive.org/web/20160302120256/http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">Archived link</a>, retrieved 2-March-2016`]
 
-1. Is it highly paid?
-1. Is it going to be highly paid in the future?
-1. Is it stressful?
-1. Is the working environment unpleasant?
+. Is it highly paid?
+. Is it going to be highly paid in the future?
+. Is it stressful?
+. Is the working environment unpleasant?
 
 Based on this, the best job in 2015 was: actuary.[^:`<a href="http://www.careercast.com/jobs-rated/best-jobs-2015">Actuary was the top ranked career in 2015.</a> <br> <a href="https://web.archive.org/web/20160302120647/http://www.careercast.com/jobs-rated/best-jobs-2015">Archived link</a>, retrieved 2-Mar-2016.`] That is, someone who uses statistics to measure and manage risks, often in the insurance industry.
 
