--- a/1.md
+++ b/1.md
@@ -32,7 +32,7 @@ By <span class="byline author vcard"><a href="https://80000hours.org/author/benj
 
 We all want to find a dream job that’s enjoyable and meaningful, but what does that actually mean?
 
-Some people imagine that the answer involves discovering their passion through a flash of insight, while others think that the key elements of their dream job are that it be easy and highly paid.
+Some people imagine that the answer involves discovering their *passion* through a flash of insight, while others think that the key elements of their dream job are that it be easy and highly paid.
 
 We’ve reviewed two decades of research into the causes of a satisfying life and career, drawing on over 60 studies, and we didn’t find much evidence for these views.
 
@@ -42,7 +42,7 @@ In fact, following your passion can lead you astray. Steve Jobs was passionate a
 
 Rather, you can develop passion by doing work that you find enjoyable and meaningful. The key is to get good at something that helps other people.
 
-*Watch this video or read the full article (15 minutes). If you just want the raw research, see the evidence review.*
+ *Watch this video or read the full article (15 minutes). If you just want the raw research, see <a href="/articles/job-satisfaction-research/">the evidence review</a>.*
 
 !ytb-iY5Vd4LH1J4
 
@@ -68,7 +68,7 @@ If this were a normal career guide, we’d start by getting you to write out a l
 
 However, research shows that although self-reflection is useful, it only goes so far.
 
-You can probably think of times in your own life when you were excited about a holiday or party, but when it actually happened, it was just okay. In the last few decades, research has shown that this is common: we’re bad at predicting what will make us most happy, and we don’t even realise how bad we are. You can find an excellent overview of this research in <a href="http://www.amazon.com/Stumbling-Happiness-Daniel-Gilbert/dp/1400077427" target="_blank">*Stumbling on Happiness*</a>, by Harvard Professor Dan Gilbert.[^:`There has been an <a href="https://en.wikipedia.org/wiki/Affective_forecasting">extensive programme</a> of research into how good humans are at predicting the effects of future events on their emotional well-being. It began with Kahneman and Snell in the early 1990s, and has recently been led by Harvard psychologist Daniel Gilbert. Much of the research is summarised in Gilbert’s book <a href="http://www.amazon.com/Stumbling-Happiness-Daniel-Gilbert/dp/1400077427">Stumbling on Happiness</a>. A recent review is in <a href="http://web.archive.org/web/20170403154011/https://dash.harvard.edu/bitstream/handle/1/3110936/Gilbert_WhyBrainTalksItself.pdf?sequence=1">Gilbert and Wilson (2009)</a>. The main takeaway is that we are bad at predicting how we will feel in the future, and we don’t realise this. We’ve previously written about our failures to predict how we will feel <a href="/2012/09/do-you-really-know-what-job-will-make-you-happy/">here</a>.`]
+You can probably think of times in your own life when you were excited about a holiday or party, but when it actually happened, it was just okay. In the last few decades, research has shown that this is common: we’re bad at predicting what will make us most happy, and we don’t even realise how bad we are. You can find an excellent overview of this research in <a href="http://www.amazon.com/Stumbling-Happiness-Daniel-Gilbert/dp/1400077427" target="_blank"> *Stumbling on Happiness*</a>, by Harvard Professor Dan Gilbert.[^:`There has been an <a href="https://en.wikipedia.org/wiki/Affective_forecasting">extensive programme</a> of research into how good humans are at predicting the effects of future events on their emotional well-being. It began with Kahneman and Snell in the early 1990s, and has recently been led by Harvard psychologist Daniel Gilbert. Much of the research is summarised in Gilbert’s book <a href="http://www.amazon.com/Stumbling-Happiness-Daniel-Gilbert/dp/1400077427">Stumbling on Happiness</a>. A recent review is in <a href="http://web.archive.org/web/20170403154011/https://dash.harvard.edu/bitstream/handle/1/3110936/Gilbert_WhyBrainTalksItself.pdf?sequence=1">Gilbert and Wilson (2009)</a>. The main takeaway is that we are bad at predicting how we will feel in the future, and we don’t realise this. We’ve previously written about our failures to predict how we will feel <a href="/2012/09/do-you-really-know-what-job-will-make-you-happy/">here</a>.`]
 
 It turns out we’re even bad at *remembering* how satisfying different experiences were. One well-established mistake is that we tend to judge an experience mainly by its ending. If you missed your flight on the last day of an enjoyable holiday, you’ll probably remember the holiday as bad. This means we can’t just trust our intuitions; we need a more systematic way of working out which job is best for us.
 
@@ -83,10 +83,10 @@ People often imagine that a dream job is well paid and easy.
 
 One of the leading job rankings in the US, provided by Careercast, rates jobs on the following criteria:[^:`CareerCast’s 2015 methodology is described <a href="http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">here</a>. <br> <a href="https://web.archive.org/web/20160302120256/http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">Archived link</a>, retrieved 2-March-2016`]
 
-. Is it highly paid?
-. Is it going to be highly paid in the future?
-. Is it stressful?
-. Is the working environment unpleasant?
+1. Is it highly paid?
+1. Is it going to be highly paid in the future?
+1. Is it stressful?
+1. Is the working environment unpleasant?
 
 Based on this, the best job in 2015 was: actuary.[^:`<a href="http://www.careercast.com/jobs-rated/best-jobs-2015">Actuary was the top ranked career in 2015.</a> <br> <a href="https://web.archive.org/web/20160302120647/http://www.careercast.com/jobs-rated/best-jobs-2015">Archived link</a>, retrieved 2-Mar-2016.`] That is, someone who uses statistics to measure and manage risks, often in the insurance industry.
 
@@ -96,5 +96,20 @@ So the *Careercast* list isn’t capturing everything. In fact, the evidence sug
 
 ### Money makes you happier, but only a little
 
+It’s a cliche that “you can’t buy happiness”, but at the same time, financial security is among most people’s <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf" target="_blank">top career priorities</a>[^:` Net Impact, What Workers Want in 2012 <br> See Figure 1.1 <br> <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf">https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf</a>`]
+. Moreover, when people are asked what would most improve the quality of their lives, the most common answer is more money.
+[^:`|When individuals are asked what would most improve the quality of their lives, the most common response is a higher income</blockquote> Judge, Timothy A., et al. "The relationship between pay and job satisfaction: A meta-analysis of the literature." Journal of Vocational Behavior 77.2 (2010): 157-167. <br> <a href="http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf">http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf</a>`] What’s going on here? Which side is right?
 
+A lot of the research on this question is remarkably low quality. But several recent major studies in economics offer more clarity. We <a href="/articles/money-and-happiness/">reviewed the best studies available</a>, and the truth turns out to lie in the middle: money *does* make you happy, but only a little.
 
+Here are the findings from a huge survey in the United States in 2010:
+
+![Money and happiness survey](https://cdn.80000hours.org/wp-content/uploads/2016/05/80K_incomewellnessA_V6-1024x543.png)[` *High income improves evaluation of life but not emotional well-being*, D. Kahneman and A. Deaton, 2010, <a href="https://web.archive.org/web/20160305061814/http://www.pnas.org/content/107/38/16489.full" target="_blank">link</a>`]
+
+People were asked to rate how satisfied they were with their lives on a scale from one to ten. The result is shown on the right, while the bottom shows their household income.
+
+You can see that going from a (pre-tax) income of $40,000 to $80,000 is only associated with an increase in life satisfaction from about 6.5 to 7 out of 10. That’s a *lot* of extra income for a small increase.
+
+But that’s optimistic. If we look at day-to-day happiness, income is even less important. “Positive affect” is whether people reported feeling happy yesterday. The left shows the fraction of people who said “yes”. This line goes flat around $50,000, showing that beyond this point income had no relationship with day-to-day happiness.
+
+![Money and happiness survey](https://cdn.80000hours.org/wp-content/uploads/2016/05/80K_incomewellnessB_V6-1024x543.png)[` *High income improves evaluation of life but not emotional well-being*, D. Kahneman and A. Deaton, 2010, <a href="https://web.archive.org/web/20160305061814/http://www.pnas.org/content/107/38/16489.full" target="_blank">link</a>`]
