--- a/1.md
+++ b/1.md
@@ -113,3 +113,133 @@ You can see that going from a (pre-tax) income of $40,000 to $80,000 is only ass
 But that’s optimistic. If we look at day-to-day happiness, income is even less important. “Positive affect” is whether people reported feeling happy yesterday. The left shows the fraction of people who said “yes”. This line goes flat around $50,000, showing that beyond this point income had no relationship with day-to-day happiness.
 
 ![Money and happiness survey](https://cdn.80000hours.org/wp-content/uploads/2016/05/80K_incomewellnessB_V6-1024x543.png)[` *High income improves evaluation of life but not emotional well-being*, D. Kahneman and A. Deaton, 2010, <a href="https://web.archive.org/web/20160305061814/http://www.pnas.org/content/107/38/16489.full" target="_blank">link</a>`]
+
+The picture is similar if we look at the fraction who were “not blue” or “stress free” yesterday.
+
+![Money and happiness survey](https://cdn.80000hours.org/wp-content/uploads/2016/05/80K_incomewellnessC_V6-1024x543.png)[` *High income improves evaluation of life but not emotional well-being*, D. Kahneman and A. Deaton, 2010, <a href="https://web.archive.org/web/20160305061814/http://www.pnas.org/content/107/38/16489.full" target="_blank">link</a>`]
+
+These lines are completely flat by $75,000, so beyond this point, income had *no* relationship with how happy, sad or stressed people felt. This is hardly surprising – we all know people who’ve gone into high earning jobs and ended up miserable.
+
+Moreover, the relationship between income and happiness under this threshold may be caused by a third factor. For example, being healthy could both make you happier and allow you to earn more. If this is true, then the effect of earning extra money will be even weaker than the correlations above suggest.
+
+Finally, $75,000 of household income is equivalent to an *individual* income of only $40,000 if you don’t have kids.[^:`The average household in the US has 2.5 people, but of course this is just an average across a wide range of family structures. Larger households enjoy ‘economies of scale’ by sharing houses, cars, and so on. This makes it tricky to say what the equivalent of a household income is for a single individual.</p>
+Standard conversion rates are the following:</p>
+<li>A single individual has an equivalence score of 1.</li>
+<li>A single extra adult adds another equivalence score of 0.5.</li>
+<li>Adding a young child to this adds an equivalence score of 0.3, while a teenager costs another 0.5.</li>
+</ul>
+<p>As a result a couple can achieve the same lifestyle as an individual with 50% more income; a couple with a young child can achieve the same lifestyle as an individual with 80% more income; a couple with a teenager require an income twice as high.</p>
+<p>These are approximations, but reasonable ones used by international organisations. They are <a href="https://web.archive.org/web/20160302122348/http://www.ifs.org.uk/wheredoyoufitin/about.php">described here by the UK Institute for Fiscal Studies</a>.</p>
+<p>For the sake of simplicity we will assume that on average across their adult lives people are in a household with an adult couple and half a child. This is just an average - some people will be single, while some will be supporting multiple children, at least for some of their lives.</p>
+<p>Using this approximation means that a single individual requires about 1/1.9 = 53% as much as a typical household, averaged over their adult lives, to achieve the same standard of living.</p>
+<p>In this case, 53% of $50,000-$75,000 for a household represents $27,000-$40,000 for an individual.</p>`]
+
+To customise this threshold for yourself, make the following adjustments (all pre-tax):
+
+. The $40,000 figure was for 2009. Due to inflation, it’s more like $45,000 in 2016.
+. Add $20,000 per dependent who does not work that you fully support.
+. Add 50% if you live in an expensive city (e.g. NY, SF), or subtract 30% if you live somewhere cheap (e.g. rural Tennessee). You can find cost of living calculations online, like this one.
+. Add more if you’re especially motivated by money (or subtract some if you have frugal tastes).
+. Add 15% in order to be able to save for retirement (or however much you personally need to save in order to be able to maintain the standard of living described above).
+
+The average college graduate in the United States has recently earned about $77,000 per year over his or her working life, while the average Ivy League graduate earns over $110,000.[^:`<p><strong>College grad earnings</strong></p>
+<p>Source:<br />
+<br />
+Carnevale, Anthony P., Stephen J. Rose, and Ban Cheah. "The college payoff: Education, occupations, lifetime earnings." (2011).<br />
+<a href="https://cew.georgetown.edu/wp-content/uploads/2014/11/collegepayoff-complete.pdf">https://cew.georgetown.edu/wp-content/uploads/2014/11/collegepayoff-complete.pdf</a></p>
+<p>Working:</p>
+<blockquote><p>
+ "the mean (average) earnings of those with a Bachelor’s degree is $500,000 higher than the median ($2.7 million)"
+</p></blockquote>
+<p>They are using a 40 year career to calculate working income:</p>
+<blockquote><p>
+ "Overall, the median lifetime earnings for all workers are $1.7 million, which is just under $42,000 per year ($20 per hour). Over a 40-year career, those who didn’t earn a high school diploma or GED are expected to bring in less than $1 million, which translates into slightly more than $24,000 a year ($11.70 per hour)."
+</p></blockquote>
+<p>So 2.7 million / 40 = $67,500</p>
+<p>This figure was for 2011, but wages have grown since then. In Jan 2011, average wages per hour in the US were $22.85 and were $26 in Jan 2017. That’s growth of 14%, which suggests that the average college graduate now earns $77,000. This is likely an underestimate, because college graduate earnings have been growing faster than average earnings. Source: <a href="https://fred.stlouisfed.org/series/CES0500000003">FRED Economic Data</a>, “Average Hourly Earnings of All Employees: Total Private (CES0500000003)”, retrieved 5-Feb-2017. This growth matches inflation, which was also <a href="http://www.inflation.eu/inflation-rates/united-states/historic-inflation/cpi-inflation-united-states.aspx">about 14% over the period</a>.</p>
+<p><strong>Mean earnings for US Ivy League grads</strong></p>
+<p>It's hard to find comparable data for just Ivy League grads. Payscale found a median mid-career salary of over $104,000, where mid-career is defined as over 10 years.</p>
+<p><a href="http://www.payscale.com/college-salary-report/best-schools-by-type/bachelors/ivy-league-schools#fullText">Source</a>, retrieved 12 Feb 2016.</p>
+<p>Our guess is that the Payscale data is too high, because people with higher incomes will be more likely to fill out the survey. On the other hand, income only peaks after 20-30 years, so the figure for 10+ years probably under-reports the overall average. Moreover, the median will be less than the mean.</p>
+<p>Overall, we’re pretty confident that the mean lifetime average for Ivy League students is over $100,000, but we’re still looking for better data.</p>
+<p>If you want to estimate your future income, then you should also account for future wage growth (which has been about 2% historically). We ignore this here, and only estimate current income.</p>`] The upshot is that if you’re a college graduate in the US (or a similar country), then you’ll likely end up well into the range where more income has almost no effect on your happiness.
+
+(Read much more <a href="/articles/money-and-happiness/" target="_blank">about our evidence</a>.)
+
+![Screen Shot 2016-03-02 at 3.23.11 AM](https://cdn.80000hours.org/wp-content/uploads/2016/03/Screen-Shot-2016-03-02-at-3.23.11-AM-e1457087919741.png)
+
+### Don’t aim for low stress
+
+Many people tell us they want to “find a job that’s not too stressful.” And it’s true that in the past, doctors and psychologists believed that stress was always bad. However, we <a href="/2016/02/should-you-look-for-a-low-stress-job/">did a survey of the modern literature on stress</a>, and today, the picture is a bit more complicated.
+
+One puzzle is that studies of high ranking government and military leaders found they had *lower* levels of stress hormones and less anxiety, despite sleeping fewer hours, managing more people and having higher occupational demands.
+
+One widely supported explanation is that having a greater sense of control (by setting their own schedules and determining how to tackle the challenges they face) protects them against the demands of the position.
+
+There are other ways that a demanding job can be good or bad depending on context:
+
+```
+<div id="tablepress-4-scroll-wrapper" class="tablepress-scroll-wrapper">
+                    <table id="tablepress-4" class="tablepress tablepress-id-4">
+                        <thead>
+                            <tr class="row-1">
+                                <th colspan="2" class="column-1">Variable</th>
+                                <th class="column-3">Good (or neutral)</th>
+                                <th class="column-4">Bad</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="row-2">
+                                <td rowspan="2" class="column-1"><strong>Type of stress</strong></td>
+                                <td class="column-2">Intensity of demands</td>
+                                <td class="column-3">Challenging but achievable</td>
+                                <td class="column-4">Mismatched with ability (either too high or too low)</td>
+                            </tr>
+                            <tr class="row-3">
+                                <td class="column-2">Duration</td>
+                                <td class="column-3">Short-term</td>
+                                <td class="column-4">On-going</td>
+                            </tr>
+                            <tr class="row-4">
+                                <td rowspan="3" class="column-1"><strong>Context</strong></td>
+                                <td class="column-2">Control</td>
+                                <td class="column-3">High control and autonomy</td>
+                                <td class="column-4">Low control and autonomy</td>
+                            </tr>
+                            <tr class="row-5">
+                                <td class="column-2">Power</td>
+                                <td class="column-3">High power</td>
+                                <td class="column-4">Low power</td>
+                            </tr>
+                            <tr class="row-6">
+                                <td class="column-2">Social Support</td>
+                                <td class="column-3">Good social support</td>
+                                <td class="column-4">Social isolation</td>
+                            </tr>
+                            <tr class="row-7">
+                                <td rowspan="2" class="column-1"><strong>How to cope</strong></td>
+                                <td class="column-2">Mindset</td>
+                                <td class="column-3">Reframe demands as opportunities, stress as useful</td>
+                                <td class="column-4">View demands as threats, stress as harmful to health</td>
+                            </tr>
+                            <tr class="row-8">
+                                <td class="column-2">Altruism</td>
+                                <td class="column-3">Performing altruistic acts</td>
+                                <td class="column-4">Focusing on yourself</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+```
+
+This means the picture looks more like the following graph. Having a very undemanding job is bad – that’s boring. Having demands that exceed your abilities is bad too: they cause harmful stress. The sweet spot is where the demands placed on you match your abilities – that’s a fulfilling challenge.
+
+![](https://cdn.80000hours.org/wp-content/uploads/2016/03/80K_challengegraph_V1.png)
+
+Instead of seeking to avoid stress, seek out a supportive context and meaningful work, and then challenge yourself.
+
+(See our <a href="http://80000hours.org/2016/02/should-you-look-for-a-low-stress-job/" target="_blank">evidence survey on stress</a> for more information.)
+
+![Lake with lake on laptop](https://cdn.80000hours.org/wp-content/uploads/2014/08/shutterstock_126706019-1-e1462383724916-1-1024x683.jpg)[`If you’re working on a lake and also using your laptop to look at pictures of lakes, you might need a harder job.`]
+
+## What *should* you aim for in a dream job?
