--- a/1.md
+++ b/1.md
@@ -242,3 +242,90 @@ Instead of seeking to avoid stress, seek out a supportive context and meaningful
 ![Lake with lake on laptop](https://cdn.80000hours.org/wp-content/uploads/2014/08/shutterstock_126706019-1-e1462383724916-1-1024x683.jpg)[`If you’re working on a lake and also using your laptop to look at pictures of lakes, you might need a harder job.`]
 
 ## What *should* you aim for in a dream job?
+
+We’ve applied the research on positive psychology about what makes for a fulfilling life and combined them with research on job satisfaction, to come up with six key ingredients of a dream job. (If you want to dig into the evidence in more depth, <a href="https://80000hours.org/articles/job-satisfaction-research/" target="_blank">see our evidence review</a>.)
+
+These are the six ingredients.
+
+### 1. Work that’s engaging
+
+What really matters is not your salary, status, type of company and so on, but rather, what you do day-by-day, hour-by-hour.
+
+Engaging work is work that draws you in, holds your attention, and gives you a sense of flow. It’s the reason an hour spent editing a spreadsheet can feel like pure drudgery, while an hour playing a computer game can feel like no time at all: computer games are designed to be as engaging as possible.
+
+![Age of Kings](https://cdn.80000hours.org/wp-content/uploads/2016/03/Age-of-Empire-II-The-Ages-of-Kings-5.jpg)[`A favourite childhood computer game, <i>Age of Empires II</i>`]
+
+What makes the difference? Why are computer games engaging while office admin isn’t? Researchers have identified four factors:
+
+1. The <b>freedom</b> to decide how to perform your work.
+1. <b>Clear tasks</b>, with a clearly defined start and end.
+1. <b>Variety</b> in the types of task.
+1. <b>Feedback</b>, so you know how well you’re doing.
+
+Each of these factors has been shown to correlate with job satisfaction in a major meta-analysis (r=0.4), and they are widely thought by experts to be the most empirically verified predictors of job satisfaction.
+
+That said, playing computer games is not the key to a fulfilling life (and not just because you won’t get paid). That’s because you also need…
+
+### 2. Work that helps others
+
+The following jobs have the four ingredients of engaging work that we discussed. But when asked, over 90% of people doing them say they don’t find them meaningful:[^:`<p>Based on payscale.com surveys of over 2.7m Americans.<br />
+Retrieved 12 Feb 2016</p>
+<p><a href="http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/least-meaningful-jobs">http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/least-meaningful-jobs</a></p>
+<p></p>
+<p><a href="http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/most-meaningful-jobs">http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/most-meaningful-jobs</a></p>
+<p></p>
+<p><a href="http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/methodology">http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/methodology</a></p>
+`]
+
+. Revenue analyst
+. <a href="https://www.youtube.com/watch?v=vF12rS6w25M" target="_blank">Fashion designer</a>
+. TV newscast director
+
+These jobs, however, are seen as meaningful by almost everyone who does them:
+
+. Fire service officer
+. Nurse / midwife
+. Neurosurgeon
+
+The key difference is that the second set of jobs seem to *help other people*. That’s why they’re meaningful, and that’s why helping others is our second factor.
+
+There’s a <a href="/articles/job-satisfaction-research/#2-work-that-helps-others">growing body of evidence</a> that helping others is a key ingredient for life satisfaction. People who volunteer are less depressed and healthier. A randomised study showed that performing a random act of kindness makes the *giver* happier. And a global survey found that people who donate to charity are as satisfied with their lives as those who earn twice as much.
+
+Helping others isn’t the only route to a meaningful career, but it’s widely accepted by researchers that it’s one of the most powerful.
+
+(We explore jobs that really help people in the <a href="/career-guide/how-much-difference-can-one-person-make/">next part of the guide</a>, including jobs that help indirectly as well as directly.)
+
+### 3. Work you’re good at
+
+Being good at your work gives you a sense of achievement, a key ingredient of life satisfaction discovered by positive psychology.
+
+It also gives you the power to negotiate for the other components of a fulfilling job, such as the ability to work on meaningful projects, undertake engaging tasks and earn fair pay. If people value your contribution, you can ask for these conditions in return.
+
+For both reasons, skill ultimately trumps interest. Even if you love art, if you pursue it as a career but aren’t good at it, you’ll end up doing boring graphic design for companies you don’t care about.
+
+That’s not to say you should only do work you’re already good at. However, you want the *potential* to get good at it.
+
+(We have a whole <a href="/career-guide/personal-fit/">article later in the guide</a> about working at what you’re good at.)
+
+### 4. Work with supportive colleagues
+
+Obviously, if you hate your colleagues and work for a boss from hell, you’re not going to be satisfied.
+
+!ytb-U1PHpkdvNOs
+
+Since good relationships are such an important part of having a fulfilling life, it’s important to be able to become friends with at least a couple of people at work. And this probably means working with at least a few people who are similar to you.
+
+However, you don’t need to become friends with everyone, or even like all of your colleagues. Research shows that perhaps the most important factor is *whether you can get help* from your colleagues when you run into problems. A major meta-analysis found “social support” was among the top predictors of job satisfaction (r=0.56).
+
+People who are disagreeable and different from yourself can be the people who’ll give you the most useful feedback, provided they care about your interests. This is because they’ll tell it like it is, and have a different perspective. Professor Adam Grant calls these people <a href="http://www.inc.com/laura-montini/the-most-undervalued-employee-at-any-organization.html">“disagreeable givers”</a>.
+
+When we think of dream jobs, we usually focus on the role. But who you work with is almost as important. A bad boss can ruin a dream position, while even boring work can be fun if done with a friend. So when selecting a job, will you be able to make friends with some people in the workplace? And more importantly, does the culture of the workplace make it easy to get help, get feedback and work together?
+
+### 5. Lack of major negatives
+
+To be satisfied, everything above is important. But you also need the *absence* of things that make work unpleasant. All of the following tend to be linked to job *dis*satisfaction.
+
+. A long commute, especially if it’s over an hour by bus.
+. Very long hours.
+. Pay you feel is unfair.
+. Job insecurity.
