--- a/1.md
+++ b/1.md
@@ -165,7 +165,7 @@ Carnevale, Anthony P., Stephen J. Rose, and Ban Cheah. "The college payoff: Educ
 
 (Read much more <a href="/articles/money-and-happiness/" target="_blank">about our evidence</a>.)
 
-![Screen Shot 2016-03-02 at 3.23.11 AM](https://cdn.80000hours.org/wp-content/uploads/2016/03/Screen-Shot-2016-03-02-at-3.23.11-AM-e1457087919741.png)
+![Screen Shot 2016-03-02 at 3.23.11 AM](https://cdn.80000hours.org/wp-content/uploads/2016/03/Screen-Shot-2016-03-02-at-3.23.11-AM-e1457087919741.png)[` `]
 
 ### Don’t aim for low stress
 
